--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "dotenv": "8.2.0",
     "express": "^4.17.1",
     "foobar": "1.1.0",
     "mongoose": "^5.10.3"
